@@ -9,6 +9,8 @@ Version 0.1.10
 * bmatches supports only matching to the forward strand.  This 
 facilitates aligning methylated sequences.
 * bpreprocess bug fixed when using an exons file.
+* bevalsim now requires knowing paired end info and the original
+reads file generated by bgeneratereads.
 
 Version 0.1.9
 * Updated bmf output to properly display when the maximum number
